force-app/main/default/objects/ordens_de_venda__c/ordens_de_venda__c.object-meta.xml
<CustomObject>
    <description>Local onde serão registrados todos os pedidos de venda</description>
    <label>Ordem de venda</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>ID do pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordens de venda</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>