force-app/main/default/objects/ordens_de_venda__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Ordens de venda</relationshipLabel>
    <relationshipName>Cliente</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>