force-app/main/default/objects/ordens_de_venda__c/fields/Data_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Data_do_pedido__c</fullName>
    <defaultValue>DATETIMEVALUE(NOW())</defaultValue>
    <label>Data do pedido</label>
    <type>DateTime</type>
</CustomField>