force-app/main/default/objects/ordens_de_venda__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <inlineHelpText>Caso haja um desconto, insira a porcentagem a ser aplicada. ex(5 para 5%)</inlineHelpText>
    <label>Desconto(%)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>