force-app/main/default/objects/ordens_de_venda__c/fields/Mercadoria__c.field-meta.xml
<CustomField>
    <fullName>Mercadoria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mercadoria</label>
    <referenceTo>Mercadorias__c</referenceTo>
    <relationshipLabel>Ordens de venda</relationshipLabel>
    <relationshipName>Ordens_de_venda</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>