force-app/main/default/objects/ordens_de_venda__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Em andamento</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>