force-app/main/default/objects/ordens_de_venda__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <formula>IF(Desconto__c == null,Valor_Unitario__c *Quantidade__c, Quantidade__c *(Valor_Unitario__c - ( Valor_Unitario__c*Desconto__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>