force-app/main/default/objects/ordens_de_venda__c/fields/Valor_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unitario__c</fullName>
    <formula>Mercadoria__r.Preco__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>